--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # This .gitignore file should be placed at the root of your Unity project directory
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
@@ -9,6 +10,12 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+
+/Assets/Animaux & Insectes/
+/Assets/Pont Pillier/
+/Assets/Nature/
+/Assets/Terrain 1/
+/Assets/Interieur/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
